...
              textStyle: _textStyle,
              errorColor: errorColor,
            ),
            const Spacer(),
            UseCouponSubmitButton(
              isDialog: isDialog,
              key: const Key("usecoupon_button"),
            ),
            const Spacer(),
          ],
        ),
      ],
    );
...
            const AutoSizeText("Number"),
            Padding(
              padding: const EdgeInsets.only(right: 20),
              child: Form(
                key: controller.formKey,
                child: TextFormField(
                  key: const Key("usecoupon_textfield"),
                  maxLength: 8,
                  keyboardType: TextInputType.number,
                  inputFormatters: <TextInputFormatter>[
                    FilteringTextInputFormatter.digitsOnly
                  ],
                  cursorColor: AppColor.brightRed,
...
