...
      }
    }
  }

  String? validateQrcode(String? qrcode) {
    if (qrcode == null || qrcode.length != 8) {
      return "กรุณากรอกรหัสคูปองให้ครบถ้วน";
    } else {
      return null;
    }
  }

  void clearCouponData() {
...
